objects/Complaints_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>RN - CloudSmiths - General settings for complaints</description>
    <fields>
        <fullName>Sites_Page_Footer__c</fullName>
        <description>RN - CloudSmiths
The footer that will display on the complaints sites page hosted on the Barcalys intranet</description>
        <inlineHelpText>The footer that will display on the complaints sites page hosted on the Barcalys intranet</inlineHelpText>
        <label>Sites Page Footer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sites_Page_Header_Subscript__c</fullName>
        <description>RN - CloudSmiths
The header subscript that will display on the complaints sites page hosted on the Barcalys intranet</description>
        <inlineHelpText>The header subscript that will display on the complaints sites page hosted on the Barcalys intranet</inlineHelpText>
        <label>Sites Page Header Subscript</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sites_Page_Header__c</fullName>
        <description>RN - CloudSmiths
The header that will display on the complaints sites page hosted on the Barcalys intranet</description>
        <inlineHelpText>The header that will display on the complaints sites page hosted on the Barcalys intranet</inlineHelpText>
        <label>Sites Page Header</label>
        <type>TextArea</type>
    </fields>
    <label>Complaints Settings</label>
</CustomObject>